Correct decimal point functionality added. CSS adjusted to work on mobile

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,6 @@ body {
     padding: 9%;
     text-align: center;
     text-decoration: none;
-
     font-size: 1.5em;
     margin: 4px 2px;
     border-radius: 8px;
@@ -67,4 +66,17 @@ body {
 
 #zero {
     grid-column: span 2;
+}
+
+/* On screens that are 450px or less, make calculator take up whole screem width */
+@media screen and (max-width: 450px) {
+    #calculatorBody {
+        min-width: 100%;
+    }  
+}
+
+@media screen and (max-height: 600px) {
+    #calculatorBody {
+        min-height: 100%;
+    }  
 }
